# gear_project

./: CMakeLists.txt  README.md
data/labelling/: 0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  MyObject.h  geometry.cpp  geometry.h  main.cpp  matrix.hpp
